--- a/.github/workflows/gold-price-reminder.yml
+++ b/.github/workflows/gold-price-reminder.yml
@@ -1,20 +1,33 @@
-# 简化版YAML：仅调用Python脚本，零格式错误
-name: GoldPriceReminder
+# 金价提醒机器人定时任务配置
+name: Gold Price Reminder
 
+# 触发规则：手动触发 + 每天9点（北京时间）自动触发
 on:
+  workflow_dispatch:  # 手动触发（保留，方便测试）
   schedule:
-    - cron: '0 */1 * * *'
-  workflow_dispatch:
+    - cron: '0 1 * * *'  # UTC时间1点 = 北京时间9点，每天运行一次
 
+# 运行环境和步骤
 jobs:
-  send-reminder:
+  send-gold-price-reminder:
     runs-on: ubuntu-latest
     steps:
-      - name: 下载代码到服务器
+      # 1. 拉取仓库代码
+      - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: 安装Python依赖
-        run: pip install requests
+      # 2. 设置Python环境
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'  # 稳定版Python
       
-      - name: 执行金价提醒脚本
+      # 3. 安装依赖（仅需requests）
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+      
+      # 4. 执行金价提醒脚本
+      - name: Run gold price reminder script
         run: python gold_price_bot.py
